// -*- mode: protobuf; indent-tabs-mode: t; c-basic-offset: 8; tab-width: 8 -*-
syntax = "proto3";

package chef.automate.domain.event_feed;
option go_package = "github.com/chef/automate/api/config/event_feed";

import "api/config/shared/global.proto";
import "api/config/shared/tls.proto";
import "components/automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
	option (chef.automate.api.service_config) = {name: "event-feed-service"};

	V1 v1 = 1;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			chef.automate.infra.config.TLSCredentials tls = 2;

    	Service service = 3;
			Log log = 4;

			message Service {
				google.protobuf.StringValue host = 1;
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "event-feed-service", default: 10134, protocol: "grpc" } ];
				google.protobuf.Int32Value purge_event_feed_after_days = 3;
			}

			message Log {
				google.protobuf.StringValue level = 1;
			}
		} // System

		message Service {}
	} // V1
}
